--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,9 @@ h2,
   font-family: 'Khand', sans-serif;
   font-size: 64px; }
 
+h3 {
+  font-size: 36px; }
+
 p {
   margin: 0;
   color: #fff;
@@ -707,12 +710,149 @@ h2 {
             background-color: #86c232;
             -webkit-transform: rotate(45deg);
                     transform: rotate(45deg); }
+  .portfolio h3 {
+    margin: 48px 0 32px;
+    text-align: center; }
+  .portfolio .testimonial-items {
+    width: 80vw;
+    max-width: 640px;
+    margin: 0 auto; }
+    .portfolio .testimonial-items .single-testimonial p {
+      text-align: center;
+      font-size: 32px;
+      line-height: 1.5;
+      font-weight: 400; }
+      .portfolio .testimonial-items .single-testimonial p.name {
+        font-size: 24px;
+        font-weight: 500;
+        margin: 16px 0 0; }
+      .portfolio .testimonial-items .single-testimonial p:not(.name) {
+        font-family: "Times New Roman";
+        font-style: italic; }
+    .portfolio .testimonial-items .slick-dots {
+      margin-top: 16px;
+      bottom: initial;
+      position: relative; }
+      .portfolio .testimonial-items .slick-dots li {
+        padding: 0;
+        margin: 0; }
+        .portfolio .testimonial-items .slick-dots li:not(:last-child) {
+          margin-right: 16px; }
+        .portfolio .testimonial-items .slick-dots li button {
+          width: 16px;
+          height: 16px;
+          border-radius: 50%;
+          background: rgba(255, 255, 255, 0.37);
+          -webkit-transition: all 0.3s ease-in-out;
+          transition: all 0.3s ease-in-out; }
+          .portfolio .testimonial-items .slick-dots li button::before {
+            display: none; }
+        .portfolio .testimonial-items .slick-dots li.slick-active button {
+          background: #86c232; }
 
 .contact {
   margin: 240px 0 120px; }
   .contact .form-holder {
     margin: 32px 0 0;
     max-width: 640px; }
+
+.history {
+  margin: 240px 0 120px; }
+  .history .work-history {
+    position: relative;
+    width: calc(50% - 100px);
+    max-width: 360px;
+    background: rgba(255, 255, 255, 0.08);
+    border-radius: 8px;
+    padding: 24px;
+    border: 1px solid #fff;
+    -webkit-perspective: 1000px;
+            perspective: 1000px; }
+    .history .work-history:nth-child(2n) {
+      margin-left: auto; }
+      .history .work-history:nth-child(2n)::before {
+        content: '';
+        position: absolute;
+        top: 50%;
+        left: -140px;
+        width: 139px;
+        border-top: 2px solid #6b6e70; }
+      .history .work-history:nth-child(2n)::after {
+        content: '';
+        position: absolute;
+        top: calc(50% - 10px);
+        left: -150px;
+        width: 20px;
+        height: 20px;
+        border-radius: 50%;
+        background-color: #86c232; }
+    .history .work-history:nth-child(2n+1) {
+      margin-right: auto; }
+      .history .work-history:nth-child(2n+1)::before {
+        content: '';
+        position: absolute;
+        top: 50%;
+        left: calc(100% + 1px);
+        width: 139px;
+        border-top: 2px solid #6b6e70; }
+      .history .work-history:nth-child(2n+1)::after {
+        content: '';
+        position: absolute;
+        top: calc(50% - 10px);
+        right: -150px;
+        width: 20px;
+        height: 20px;
+        border-radius: 50%;
+        background-color: #86c232; }
+    .history .work-history:hover::after {
+      -webkit-animation-timing-function: ease-in-out;
+              animation-timing-function: ease-in-out;
+      -webkit-animation-name: bitting;
+              animation-name: bitting;
+      -webkit-animation-duration: 0.8s;
+              animation-duration: 0.8s;
+      -webkit-animation-iteration-count: infinite;
+              animation-iteration-count: infinite;
+      -webkit-animation-direction: alternate;
+              animation-direction: alternate; }
+    .history .work-history:not(:last-child) {
+      margin-top: 32px; }
+    .history .work-history__heading span {
+      font-weight: 600;
+      font-size: 22px; }
+    .history .work-history__heading h3 {
+      margin: 8px 0;
+      color: #86c232; }
+    .history .work-history__date {
+      font-weight: 500; }
+    .history .work-history__items {
+      margin: 16px 0 0; }
+      .history .work-history__items li {
+        position: relative;
+        padding-left: 12px;
+        font-size: 18px; }
+        .history .work-history__items li:not(:last-child) {
+          margin-bottom: 8px; }
+        .history .work-history__items li::before {
+          content: '';
+          position: absolute;
+          left: 0;
+          top: 8px;
+          width: 6px;
+          height: 6px;
+          background-color: #86c232;
+          -webkit-transform: rotate(45deg);
+                  transform: rotate(45deg); }
+  .history .history-holder {
+    position: relative; }
+    .history .history-holder::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: calc(50% - 1px);
+      width: 0;
+      height: 100%;
+      border-right: 2px solid #6b6e70; }
 
 section.has-label {
   position: relative; }
@@ -733,9 +873,27 @@ section.has-label {
     content: 'About'; }
   section.has-label.skills::before {
     content: 'Skills'; }
+  section.has-label.history::before {
+    content: 'History'; }
   section.has-label.portfolio::before {
     content: 'Works'; }
   section.has-label.contact::before {
     content: 'Contact'; }
+
+@-webkit-keyframes bitting {
+  0% {
+    -webkit-transform: scale(0.8);
+            transform: scale(0.8); }
+  100% {
+    -webkit-transform: scale(1.2);
+            transform: scale(1.2); } }
+
+@keyframes bitting {
+  0% {
+    -webkit-transform: scale(0.8);
+            transform: scale(0.8); }
+  100% {
+    -webkit-transform: scale(1.2);
+            transform: scale(1.2); } }
 
 /*# sourceMappingURL=style.css.map */
