--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -220,12 +220,180 @@ h2 {
       }
     }
   }
+  h3 {
+    margin: 48px 0 32px;
+    text-align: center;
+  }
+  .testimonial-items {
+    width: 80vw;
+    max-width: 640px;
+    margin: 0 auto;
+    .single-testimonial {
+      p {
+        text-align: center;
+        font-size: 32px;
+        line-height: 1.5;
+        font-weight: 400;
+        &.name {
+          font-size: 24px;
+          font-weight: 500;
+          margin: 16px 0 0;
+        }
+        &:not(.name) {
+          font-family: "Times New Roman";
+          font-style: italic;
+        }
+      }
+    }
+    .slick-dots {
+      margin-top: 16px;
+      bottom: initial;
+      position: relative;
+      li {
+        padding: 0;
+        margin: 0;
+        &:not(:last-child) {
+          margin-right: 16px;
+        }
+        button {
+          width: 16px;
+          height: 16px;
+          border-radius: 50%;
+          background: rgba(255, 255, 255, 0.37);
+          transition: all 0.3s ease-in-out;
+          &::before {
+            display: none;
+          }
+        }
+        &.slick-active {
+          button {
+            background: $secondary;
+          }
+        }
+      }
+    }
+  }
 }
 .contact {
   margin: 240px 0 120px;
   .form-holder {
     margin: 32px 0 0;
     max-width: 640px;
+  }
+}
+.history {
+  margin: 240px 0 120px;
+  .work {
+    &-history {
+      position: relative;
+      width: calc(50% - 100px);
+      max-width: 360px;
+      background: rgba(255, 255, 255, 0.08);
+      border-radius: 8px;
+      padding: 24px;
+      border: 1px solid $white;
+      perspective: 1000px;
+      &:nth-child(2n) {
+        margin-left: auto;
+        &::before {
+          content: '';
+          position: absolute;
+          top: 50%;
+          left: -140px;
+          width: 139px;
+          border-top: 2px solid $text_color;
+        }
+        &::after {
+          content: '';
+          position: absolute;
+          top: calc(50% - 10px);
+          left: -150px;
+          width: 20px;
+          height: 20px;
+          border-radius: 50%;
+          background-color: $secondary;
+        }
+      }
+      &:nth-child(2n+1) {
+        margin-right: auto;
+        &::before {
+          content: '';
+          position: absolute;
+          top: 50%;
+          left: calc(100% + 1px);
+          width: 139px;
+          border-top: 2px solid $text_color;
+        }
+        &::after {
+          content: '';
+          position: absolute;
+          top: calc(50% - 10px);
+          right: -150px;
+          width: 20px;
+          height: 20px;
+          border-radius: 50%;
+          background-color: $secondary;
+        }
+      }
+      &:hover {
+        &::after {
+          animation-timing-function: ease-in-out;
+          animation-name: bitting;
+          animation-duration: 0.8s;
+          animation-iteration-count: infinite;
+          animation-direction: alternate;
+        }
+      }
+      &:not(:last-child) {
+        margin-top: 32px;
+      }
+      &__heading {
+        span {
+          font-weight: 600;
+          font-size: 22px;
+        }
+        h3 {
+          margin: 8px 0;
+          color: $secondary
+        }
+      }
+      &__date {
+        font-weight: 500;
+      }
+      &__items {
+        margin: 16px 0 0;
+        li {
+          position: relative;
+          padding-left: 12px;
+          font-size: 18px;
+          &:not(:last-child) {
+            margin-bottom: 8px;
+          }
+          &::before {
+            content: '';
+            position: absolute;
+            left: 0;
+            top: 8px;
+            width: 6px;
+            height: 6px;
+            background-color: $secondary;
+            transform: rotate(45deg);
+          }
+        }
+      }
+    }
+  }
+  .history-holder {
+    position: relative;
+    &::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: calc(50% - 1px);
+      width: 0;
+      height: 100%;
+      border-right: 2px solid $text_color;
+    }
   }
 }
 
@@ -252,10 +420,18 @@ section.has-label {
   &.skills {
     &::before { content: 'Skills'; }
   }
+  &.history {
+    &::before { content: 'History'; }
+  }
   &.portfolio {
     &::before { content: 'Works'; }
   }
   &.contact {
     &::before { content: 'Contact'; }
   }
+}
+
+@keyframes bitting {
+  0%   {transform: scale(0.8);}
+  100% {transform: scale(1.2);}
 }
