--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -75,15 +75,28 @@ h2 {
 }
 .about {
   margin: 240px 0 120px;
+  @include mq("tablet-wide", max) {
+    margin: 160px 0 80px;
+  }
+  @include mq("tablet", max) {
+    margin: 100px 0 40px;
+  }
   .container {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    @include mq("tablet-wide", max) {
+      flex-wrap: wrap;
+    }
     .img-holder {
       width: 300px;
       font-size: 0;
       order: 1;
       margin-left: 64px;
+      @include mq("tablet-wide", max) {
+        margin: 48px auto 0;
+        text-align: center;
+      }
       img {
         max-width: 100%;
         border-radius: 50%;
@@ -96,6 +109,9 @@ h2 {
     }
     .text-holder {
       width: calc(100% - 350px);
+      @include mq("tablet-wide", max) {
+        width: 100%;
+      }
       p {
         margin: 0 0 16px;
       }
@@ -104,6 +120,12 @@ h2 {
 }
 .skills {
   margin: 240px 0 120px;
+  @include mq("tablet-wide", max) {
+    margin: 160px 0 80px;
+  }
+  @include mq("tablet", max) {
+    margin: 100px 0 40px;
+  }
   .container {
     > p {
       max-width: 640px;
@@ -118,6 +140,9 @@ h2 {
         width: calc(50% - 16px);
         display: flex;
         margin: 0 0 24px;
+        @include mq("tablet", max) {
+          width: 100%;
+        }
         .ico-holder {
           width: 76px;
           text-align: center;
@@ -149,6 +174,9 @@ h2 {
         margin: 0 auto;
         font-size: 32px;
         font-weight: 600;
+        @include mq("tablet", max) {
+          font-size: 20px;
+        }
         .tagcloud--item {
           color: $primary;
           transition: color 0.3s ease-in-out;
@@ -163,6 +191,12 @@ h2 {
 }
 .portfolio {
   margin: 240px 0 120px;
+  @include mq("tablet-wide", max) {
+    margin: 160px 0 80px;
+  }
+  @include mq("tablet", max) {
+    margin: 100px 0 40px;
+  }
   .container {
     > p {
       max-width: 640px;
@@ -173,15 +207,20 @@ h2 {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    width: calc(100% + 48px);
     perspective: 1000px;
     .portfolio-item {
-      width: calc(100% / 3 - 24px);
+      width: calc(100% / 3 - 16px);
       margin: 0 0 24px;
       border: 2px solid $grey;
       background-color: rgba(255, 255, 255, 0.1);
       box-shadow: 0 0 0px 0px rgba(134, 194, 50, 0.0);
       transition: box-shadow 0.6s ease-in-out;
+      @include mq("tablet", max) {
+        width: calc(50% - 12px);
+      }
+      @include mq("phone-wide", max) {
+        width: 100%;
+      }
       &:hover {
         box-shadow: 0 0 16px 0px rgba(134, 194, 50, 0.3);
       }
@@ -234,6 +273,9 @@ h2 {
         font-size: 32px;
         line-height: 1.5;
         font-weight: 400;
+        @include mq("tablet", max) {
+          font-size: 24px;
+        }
         &.name {
           font-size: 24px;
           font-weight: 500;
@@ -276,6 +318,12 @@ h2 {
 }
 .contact {
   margin: 240px 0 120px;
+  @include mq("tablet-wide", max) {
+    margin: 160px 0 80px;
+  }
+  @include mq("tablet", max) {
+    margin: 100px 0 40px;
+  }
   .form-holder {
     margin: 32px 0 0;
     max-width: 640px;
@@ -283,6 +331,12 @@ h2 {
 }
 .history {
   margin: 240px 0 120px;
+  @include mq("tablet-wide", max) {
+    margin: 160px 0 80px;
+  }
+  @include mq("tablet", max) {
+    margin: 100px 0 40px;
+  }
   .work {
     &-history {
       position: relative;
@@ -293,6 +347,12 @@ h2 {
       padding: 24px;
       border: 1px solid $white;
       perspective: 1000px;
+      @include mq("tablet-wide", max) {
+        width: 75%;
+      }
+      @include mq("tablet", max) {
+        width: 100%;
+      }
       &:nth-child(2n) {
         margin-left: auto;
         &::before {
@@ -302,6 +362,13 @@ h2 {
           left: -140px;
           width: 139px;
           border-top: 2px solid $text_color;
+          @include mq("desktop", max) {
+            width: 100px;
+            left: -101px;
+          }
+          @include mq("tablet-wide", max) {
+            display: none;
+          }
         }
         &::after {
           content: '';
@@ -312,6 +379,12 @@ h2 {
           height: 20px;
           border-radius: 50%;
           background-color: $secondary;
+          @include mq("desktop", max) {
+            left: -110px;
+          }
+          @include mq("tablet-wide", max) {
+            display: none;
+          }
         }
       }
       &:nth-child(2n+1) {
@@ -323,6 +396,12 @@ h2 {
           left: calc(100% + 1px);
           width: 139px;
           border-top: 2px solid $text_color;
+          @include mq("desktop", max) {
+            width: 100px;
+          }
+          @include mq("tablet-wide", max) {
+            display: none;
+          }
         }
         &::after {
           content: '';
@@ -333,6 +412,12 @@ h2 {
           height: 20px;
           border-radius: 50%;
           background-color: $secondary;
+          @include mq("desktop", max) {
+            right: -110px;
+          }
+          @include mq("tablet-wide", max) {
+            display: none;
+          }
         }
       }
       &:hover {
@@ -345,7 +430,7 @@ h2 {
         }
       }
       &:not(:last-child) {
-        margin-top: 32px;
+        margin-bottom: 32px;
       }
       &__heading {
         span {
@@ -393,6 +478,9 @@ h2 {
       width: 0;
       height: 100%;
       border-right: 2px solid $text_color;
+      @include mq("tablet-wide", max) {
+        display: none;
+      }
     }
   }
 }
@@ -413,6 +501,18 @@ section.has-label {
     font-weight: 700;
     text-transform: uppercase;
     opacity: 0.5;
+    @include mq("desktop", max) {
+      right: 64px;
+    }
+    @include mq("tablet-wide", max) {
+      font-size: 160px;
+      top: -120px;
+    }
+    @include mq("tablet", max) {
+      font-size: 100px;
+      top: -60px;
+      right: 16px;
+    }
   }
   &.about {
     &::before { content: 'About'; }
