--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -15,6 +15,10 @@
     justify-content: center;
     align-items: center;
     transition: all 0.3s ease-in-out;
+    z-index: 1;
+    @include mq("desktop-wide", max) {
+      font-size: 0;
+    }
     .icon-holder {
       font-size: 0;
       img {
@@ -36,6 +40,10 @@
   &-menu {
     &__items {
       display: flex;
+      @include mq("tablet", max) {
+        display: block;
+        text-align: right;
+      }
     }
     &__item {
       a {
@@ -47,6 +55,10 @@
       }
       &:not(:last-child) {
         margin-right: 16px;
+        @include mq("tablet", max) {
+          margin-right: 0;
+          margin-bottom: 12px;
+        }
       }
     }
   }
